--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,9 @@
 /storage/*.key
 /vendor
 .env
-.env.backup
-.env.production
+.env.*
+!.env.example
+!.env.development
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
