--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Intexpro Freelance
+APP_NAME='Intexpro Freelance'
 APP_ENV=example
 APP_KEY=
 APP_DEBUG=true
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=intexpro-freelance-db
-DB_USERNAME=sa
-DB_PASSWORD=mysql
+DB_CONNECTION=connection
+DB_HOST=host
+DB_PORT=port
+DB_DATABASE=db
+DB_USERNAME=user
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -30,4 +30,4 @@ PUSHER_PORT=443
 PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
 
-L5_SWAGGER_CONST_HOST=http|s://host:port/path
+L5_SWAGGER_CONST_HOST=http|s://host:port/[path]
