--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,9 @@
     "@mantine/spotlight": "^7.5.0",
     "axios": "^1.6.5",
     "dayjs": "^1.11.10",
+    "mobx": "^6.12.0",
+    "mobx-react-lite": "^4.0.5",
+    "mobx-utils": "^6.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
