--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@mantine/notifications": "^7.5.0",
     "@mantine/spotlight": "^7.5.0",
     "axios": "^1.6.5",
+    "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.5",
