--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@mantine/modals": "^7.5.0",
     "@mantine/notifications": "^7.5.0",
     "@mantine/spotlight": "^7.5.0",
+    "@tabler/icons-react": "^2.47.0",
     "axios": "^1.6.5",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
