--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
     "mobx": "^6.12.0",
+    "mobx-persist-store": "^1.1.4",
     "mobx-react-lite": "^4.0.5",
     "mobx-utils": "^6.0.8",
     "react": "^18.2.0",
